--- a/index.html
+++ b/index.html
@@ -2,44 +2,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/dark.css" />
     <link rel="stylesheet" href="/css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="/css/fullpage.css" />
+    <link rel="stylesheet" href="/css/sections.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+       href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+       rel="stylesheet"
+       />
   </head>
-  <body class="body">
+  <body class="body fp-responsive">
     <!-- HEADER -->
-    <header class="header">
+    <header class="header ">
       <nav class="nav-bar">
         <section class="logo">
           <h3 id="logoname">FARAGI Ayoub</h3>
         </section>
         <section class="onheader header-items">
-         <li class="item-project">
-          <a href="#" >
-            <span class="active-span">Projects</span>
-          </a>
-         </li>
-         <li class="item-project">
-          <a href="#" >
-            <span class="active-span" >About Me</span>
-          </a>
-         </li>
+          <li class="item-project">
+            <a href="#ok.html">
+              <span class="active-span">Projects</span>
+            </a>
+          </li>
+          <li class="item-project">
+            <a href="#">
+              <span class="active-span">About Me</span>
+            </a>
+          </li>
           <li class="darkbutton-countainer">
             <input type="checkbox" class="toggle" value="Dark" />
             <div class="ball"></div>
           </li>
         </section>
 
-          <button class="menu-button">
-            <img class="menu-img" src="/img/lmenu.png" />
-          </button>
+        <button class="menu-button">
+          <img class="menu-img" src="/img/lmenu.png" />
+        </button>
       </nav>
     </header>
     <div class="hidden-menu" data-checker="off">
@@ -49,12 +57,136 @@
       </li>
     </div>
     <!-- /HEADER -->
+    <div id="fullpage" >
+      <section class="section s1">
+          <h1 class="intro">
+             Hey, my name is Ayoub FARAGI
+          </h1>
+          <h1 class="intro">
+             I am a Full stack Engineer
+          </h1>
+        </br></br></br></br></br></br></br></br></br>
+          <h1 class="intro">
+             - I'm a Fullstack Developer & Designer.
+          </h1>
+          <p>
+             I'm a student from 1337, a pretty cool computer science school from the 42 Network located in  Khouribga, Morocco.
+             I've always been drawn to the overlap between design and development. My skills are broad: from ux to design, front end to back end development.
+             Architecture matters to me. Things have to stay clean and simple, and with this in mind I take time creating modules and boilerplates, trying to bring some purity in my work.
+             I'm available for remote work - if you would like to build something together, get in touch?
+          </p>
+      </section>
+      <section  class="section ">
+        <h1 class="intro" style="text-align: center;">
+          - My Projects.
+       </h1>
+        <section class="slide s3">
+         <div class="projects">
+           <section class="link-and-line">
+             <a class="project" href="https://github.com/biggymarley/Camagru">- Camagru :</a>
+             <div class="line"></div>
+            </section>
+          </br></br></br></br>
+            <p>
+               Camagru : instagram like app
+               This web project is  a small web application allowing you to
+               make basic photo and video editing using your webcam and some predefined images.
+               Using: 
+            </p>
+            <p>
+               SERVEUR SIDE : sql , PHP ===> using PDO
+            </p>
+            <p>
+               FRONTEND :       html and pure Css
+            </p>
+            </p>
+            </div>
+        </section>
+        <section class=" slide s2">
+          <div class="projects">
+            <a class="project" href="https://github.com/biggymarley/Minishell_1337">- Minishell :</a>
+            <div class="line"></div>
+          </br></br></br></br>
+            <p>
+              First step in the creation of a shell. In this project, this mini-shell capable of reading and evaluating simple user commands. Reading  involve trivial lexical analysis and parsing of the command. Evaluation  involve searching for the corresponding binary on the machine and execute it, and also execute the relevant code in the case of a “built-in” command in the shell.
+            </p>
+          </div>
+        </section>
+        <section class="slide">
+          <div class="projects">
+            <a class="project" href="https://github.com/biggymarley/login-signup-php-sql">- Login/Signup PhP/SQL Project</a>
+               <div class="line"></div>
+              </br></br></br></br>
+               <p>
+                  First login system i made : This project is login/Signup System coded with php, linked to sql databese 
+               </p>
+          </div>
+        </section>
+        <section class="slide">
+          <div class="projects">
+            <a class="project" href="https://github.com/biggymarley/ls_1337">- Command Line ls : /bin/ls</a>
+            <div class="line"></div>
+          </br></br></br></br>
+            <p>
+               The ls command is one of the most used commands. Perhaps you have already asked yourself how is this
+               function coded? Thanks to this project, you will soon find out.
+            </p>
+          </div>
+        </section>
+        <section class="slide">
+          <div class="projects">
+            <a class="project" href="https://github.com/biggymarley/shell-21sh">- 21SH </a>
+            <div class="line"></div>
+          </br></br></br></br>
+            <p>
+              Thanks to the Minishell project, you discovered a part of what is behind the scene of a
+              shell, such as the one you use everyday. And more specifically the process’ synchronisation creation with functions like fork and wait.
+              The 21sh project will make you go further by adding, amoungst other things, interprocess communication using pipes.
+              You’ll discover, or rediscover if you worked on the ft_select project, termcaps. This
+              library will allow you to add to your shell a line edition feature. You’ll then be able to
+              edit a typo made on your command without having to retype it completely as well as
+              repeat a previous command using history. Of course you’ll have to code those features.
+              Good news is termcaps will help you do it, bad news is it’ll not do it for you!
+            </p>
+          </div>
+        </section>
+        <section class="slide">
+          <div class="projects">
+            <a class="project" href="https://github.com/biggymarley/Piscine-php">- Piscine PHP </a>
+            <div class="line"></div>
+          </br></br></br></br>
+            <p> 
+            The PHP pool will allow you to access basic web technologies. 
+            </p>
+          </div>
+        </section>
+      </section>
+          <section class="section">
+            <div id="contactme">
+              <h1 id="intro">
+                 - Contact Me.
+              </h1>
+              <li id="itemlists">
+                 <a href="https://github.com/biggymarley">
+                 <img id="logo" src="img/gitlogo.png" />
+                 </a>
+              </li>
+              <li id="itemlists">
+                 <a href="https://www.linkedin.com/in/ayoub-faragi-89518a1b8/">
+                 <img id="logo" src="img/lnlogo.png" />
+                 </a>
+              </li>
+              <li id="itemlists">
+                 <a href="mailto:afaragi@student.1337.ma">
+                 <img id="logo" src="img/send.png" />
+                 </a>
+              </li>
+           </div>
+          </section>
+    </div>
 
-
-
-
-
-
+    <script src="/js/fullpage.js"></script>
+    <script src="/js/fullpage.extensions.min.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
