--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/dark.css" />
-    <link rel="stylesheet" href="/css/darkmode-buttom.css" />
-    <link rel="stylesheet" href="/css/fullpage.css" />
-    <link rel="stylesheet" href="/css/sections.css" />
+    <link rel="stylesheet" href="/Npf/css/index.css" />
+    <link rel="stylesheet" href="/Npf/css/header.css" />
+    <link rel="stylesheet" href="/Npf/css/dark.css" />
+    <link rel="stylesheet" href="/Npf/css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="/Npf/css/fullpage.css" />
+    <link rel="stylesheet" href="/Npf/css/sections.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap"
+      href="https://fonts.googleapis.com/Npf/css2?family=Proza+Libre&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-       href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+       href="https://fonts.googleapis.com/Npf/css2?family=Orbitron&display=swap"
        rel="stylesheet"
        />
   </head>
@@ -185,8 +185,8 @@
           </section>
     </div>
 
-    <script src="/js/fullpage.js"></script>
-    <script src="/js/fullpage.extensions.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/Npf/js/fullpage.js"></script>
+    <script src="/Npf/js/fullpage.extensions.min.js"></script>
+    <script src="/Npf/js/index.js"></script>
   </body>
 </html>
