--- a/ok.html
+++ b/ok.html
@@ -3,20 +3,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/dark.css" />
-    <link rel="stylesheet" href="/css/darkmode-buttom.css" />
-    <link rel="stylesheet" href="/css/fullpage.min.css" />
-    <link rel="stylesheet" href="/css/sections.css" />
+    <link rel="stylesheet" href="/Npf/css/index.css" />
+    <link rel="stylesheet" href="/Npf/css/header.css" />
+    <link rel="stylesheet" href="/Npf/css/dark.css" />
+    <link rel="stylesheet" href="/Npf/css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="/Npf/css/fullpage.min.css" />
+    <link rel="stylesheet" href="/Npf/css/sections.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap"
+      href="https://fonts.googleapis.com/Npf/css2?family=Proza+Libre&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-       href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+       href="https://fonts.googleapis.com/Npf/css2?family=Orbitron&display=swap"
        rel="stylesheet"
        />
   </head>
