--- a/ok.html
+++ b/ok.html
@@ -45,7 +45,7 @@
         </section>
 
         <button class="menu-button">
-          <img class="menu-img" src="/img/lmenu.png" />
+          <img class="menu-img" src="/Npf/img/lmenu.png" />
         </button>
       </nav>
     </header>
