adding some styles

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
           </section>
     </div>
 
-    <script src="/js/fullpage.js"></script>
-    <script src="/js/fullpage.extensions.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/Npf/js/fullpage.js"></script>
+    <script src="/Npf/js/fullpage.extensions.min.js"></script>
+    <script src="/Npf/js/index.js"></script>
   </body>
 </html>
