--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </a>
               </li>
               <li id="itemlists">
-                <a href="https://www.linkedin.com/in/ayoub-faragi-89518a1b8/">
+                <a href="https://www.linkedin.com/in/afaragi">
                   <img id="logo" src="img/lnlogo.png" />
                 </a>
               </li>
