fiximg navigation and padding menu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="height=device-height, initial-scale=1.0">
+    <!-- <meta name="viewport" content="height=device-height, initial-scale=1.0"> -->
     <title>Portfolio</title>
     <link rel="stylesheet" href="/Npf/css/index.css" />
     <link rel="stylesheet" href="/Npf/css/header.css" />
@@ -81,7 +81,7 @@
           <h1 class="intro">
             I am a Full stack Engineer
           </h1>
-        </br></br></br></br></br></br></br></br></br>
+        <!-- </br></br></br></br></br></br></br></br></br> -->
         <h1 class="intro">
           - I'm a Fullstack Developer & Designer.
         </h1>
