--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <ul id="menu" class="onheader header-items">
           <!-- <ul class="onheader"> -->
             <li class="item-project">
-              <a href="#Projects">
+              <a href="#Ps">
                 <span class="active-span">Projects</span>
               </a>
             </li>
             <li class="item-project">
-              <a href="#Contactme">
+              <a href="#Cme">
                 <span class="active-span">About Me</span>
               </a>
             </li>
@@ -57,12 +57,12 @@
     </header>
     <div class="hidden-menu" data-checker="off">
       <li class="darkbutton-countainer">
-        <a href="#Projects">
+        <a href="#Ps">
           <span class="active-span">Projects</span>
         </a>
       </li>
       <li class="darkbutton-countainer">
-        <a href="#Contactme">
+        <a href="#Cme">
           <span class="active-span">About Me</span>
         </a>
       </li>
@@ -81,7 +81,7 @@
           <h1 class="intro">
             I am a Full stack Engineer
           </h1>
-        <!-- </br></br></br></br></br></br></br></br></br> -->
+        </br></br></br></br>
         <h1 class="intro">
           - I'm a Fullstack Developer & Designer.
         </h1>
@@ -103,7 +103,7 @@
              <a class="project" href="https://github.com/biggymarley/Camagru">- Camagru :</a>
              <div class="line"></div>
             </section>
-          </br></br></br></br>
+          <!-- </br></br></br></br> -->
             <p>
                Camagru : instagram like app
                This web project is  a small web application allowing you to
@@ -123,7 +123,7 @@
           <div class="projects">
             <a class="project" href="https://github.com/biggymarley/Minishell_1337">- Minishell :</a>
             <div class="line"></div>
-          </br></br></br></br>
+          <!-- </br></br></br></br> -->
             <p>
               First step in the creation of a shell. In this project, this mini-shell capable of reading and evaluating simple user commands. Reading  involve trivial lexical analysis and parsing of the command. Evaluation  involve searching for the corresponding binary on the machine and execute it, and also execute the relevant code in the case of a “built-in” command in the shell.
             </p>
@@ -133,7 +133,7 @@
           <div class="projects">
             <a class="project" href="https://github.com/biggymarley/login-signup-php-sql">- Login/Signup PhP/SQL Project</a>
                <div class="line"></div>
-              </br></br></br></br>
+              <!-- </br></br></br></br> -->
                <p>
                   First login system i made : This project is login/Signup System coded with php, linked to sql databese 
                </p>
@@ -143,7 +143,7 @@
           <div class="projects">
             <a class="project" href="https://github.com/biggymarley/ls_1337">- Command Line ls : /bin/ls</a>
             <div class="line"></div>
-          </br></br></br></br>
+          <!-- </br></br></br></br> -->
             <p>
                The ls command is one of the most used commands. Perhaps you have already asked yourself how is this
                function coded? Thanks to this project, you will soon find out.
@@ -154,7 +154,7 @@
           <div class="projects">
             <a class="project" href="https://github.com/biggymarley/shell-21sh">- 21SH </a>
             <div class="line"></div>
-          </br></br></br></br>
+          <!-- </br></br></br></br> -->
             <p>
               Thanks to the Minishell project, you discovered a part of what is behind the scene of a
               shell, such as the one you use everyday. And more specifically the process’ synchronisation creation with functions like fork and wait.
@@ -171,7 +171,7 @@
           <div class="projects">
             <a class="project" href="https://github.com/biggymarley/Piscine-php">- Piscine PHP </a>
             <div class="line"></div>
-          </br></br></br></br>
+          <!-- </br></br></br></br> -->
             <p> 
             The PHP pool will allow you to access basic web technologies. 
             </p>
@@ -208,5 +208,6 @@
     <script src="/Npf/js/fullpage.js"></script>
     <script src="/Npf/js/fullpage.extensions.min.js"></script>
     <script src="/Npf/js/index.js"></script>
+    <script src="/Npf/js/sliderdark.js"></script>
   </body>
 </html>
