Add projects gallery

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- /HEADER -->
     <div id="fullpage" >
       <section class="section s1" >
-        <div class="glass">
+        <div class="container">
           <h1 class="intro" >
             Hey, my name is Ayoub FARAGI
           </h1>
@@ -94,13 +94,14 @@
       </div>
       </section>
       <section  class="section" data-anchor="#Projects">
+        <div class="container">
         <h1 class="intro" style="text-align: center;">
           - My Projects.
        </h1>
         <section class="slide s3">
          <div class="projects">
            <section class="link-and-line">
-             <a class="project" href="https://github.com/biggymarley/Camagru">- Camagru :</a>
+             <a class="project" href="/Npf/Gallery/camagru.html">- Camagru :</a>
              <div class="line"></div>
             </section>
           <!-- </br></br></br></br> -->
@@ -118,6 +119,7 @@
             </p>
             </p>
             </div>
+          
         </section>
         <section class=" slide s2">
           <div class="projects">
@@ -177,6 +179,7 @@
             </p>
           </div>
         </section>
+      </div>
       </section>
           <section class="section">
             <div id="contactme">
@@ -206,6 +209,7 @@
     </div>
 
     <script src="/Npf/js/fullpage.js"></script>
+    <script src="/Npf/js/jquery.flip.js"></script>
     <script src="/Npf/js/fullpage.extensions.min.js"></script>
     <script src="/Npf/js/index.js"></script>
     <script src="/Npf/js/sliderdark.js"></script>
