--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <section class="link-and-line tool">
                   <a class="project" href="https://github.com/biggymarley/camagru">- Camagru : 
                   </br> 
-                    <img class='projectimg' src="/Npf/img/camagru.svg"/></a>
+                    <img class='projectimg' src="/Npf/img/web.svg"/></a>
                   <div class="line"></div>
                 </section>
                 
@@ -242,6 +242,7 @@
               </li>
               <li id="itemlists">
                 <a href="https://www.linkedin.com/in/afaragi">
+                  
                   <img class="logo" src="img/in.svg" /><sub>Linkdin</sub>
                 </a>
               </li>
