--- a/index.html
+++ b/index.html
@@ -96,11 +96,8 @@
       <section  class="section" data-anchor="#Projects">
         <div class="container glass">
           <!-- <section class="glass"> -->
-          </br></br>
+          <br><br>
           <section class="slide s3">
-              <h1 class="intro" style="text-align: center;">
-                - My Projects.
-              </h1>
               <div class="projects">
                 <section class="link-and-line tool">
                   <a class="project" href="https://github.com/biggymarley/camagru">- Camagru : 
@@ -170,8 +167,8 @@
           </div>
         </section>
         <section class="slide">
-          <div class="projects">   <section class="link-and-line tool">
-             
+          <div class="projects">   
+            <section class="link-and-line tool">
             <a class="project" href="https://github.com/biggymarley/shell-21sh">- 21SH </br><img class='projectimg' src="/Npf/img/minishell.svg"/></a>
             <div class="line"></div>
           </section>
@@ -180,11 +177,6 @@
               Thanks to the Minishell project, you discovered a part of what is behind the scene of a
               shell, such as the one you use everyday. And more specifically the process’ synchronisation creation with functions like fork and wait.
               The 21sh project will make you go further by adding, amoungst other things, interprocess communication using pipes.
-              You’ll discover, or rediscover if you worked on the ft_select project, termcaps. This
-              library will allow you to add to your shell a line edition feature. You’ll then be able to
-              edit a typo made on your command without having to retype it completely as well as
-              repeat a previous command using history. Of course you’ll have to code those features.
-              Good news is termcaps will help you do it, bad news is it’ll not do it for you!
             </p>
             <div class="languages inside">
               <section class="type">
