fix some errors

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/npf/css/index.css" />
-    <link rel="stylesheet" href="/npf/css/header.css" />
-    <link rel="stylesheet" href="/npf/css/dark.css" />
-    <link rel="stylesheet" href="/npf/css/darkmode-buttom.css" />
-    <link rel="stylesheet" href="/npf/css/fullpage.css" />
-    <link rel="stylesheet" href="/npf/css/glass.css" />
-    <link rel="stylesheet" href="/npf/css/sections.css" />
-    <link rel="stylesheet" href="/npf/css/media.css" />
+    <link rel="stylesheet" href="/Npf/css/index.css" />
+    <link rel="stylesheet" href="/Npf/css/header.css" />
+    <link rel="stylesheet" href="/Npf/css/dark.css" />
+    <link rel="stylesheet" href="/Npf/css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="/Npf/css/fullpage.css" />
+    <link rel="stylesheet" href="/Npf/css/glass.css" />
+    <link rel="stylesheet" href="/Npf/css/sections.css" />
+    <link rel="stylesheet" href="/Npf/css/media.css" />
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -235,10 +235,10 @@
           </section>
     </div>
 
-    <script href="/npf/js/fullpage.js"></script>
-    <script href="/npf/js/jquery.flip.js"></script>
-    <script href="/npf/js/fullpage.extensions.min.js"></script>
-    <script href="/npf/js/index.js"></script>
-    <script href="/npf/js/sliderdark.js"></script>
+    <script href="/Npf/js/fullpage.js"></script>
+    <script href="/Npf/js/jquery.flip.js"></script>
+    <script href="/Npf/js/fullpage.extensions.min.js"></script>
+    <script href="/Npf/js/index.js"></script>
+    <script href="/Npf/js/sliderdark.js"></script>
   </body>
 </html>
