fix some errors

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
           </section>
     </div>
 
-    <script href="/Npf/js/fullpage.js"></script>
-    <script href="/Npf/js/jquery.flip.js"></script>
-    <script href="/Npf/js/fullpage.extensions.min.js"></script>
-    <script href="/Npf/js/index.js"></script>
-    <script href="/Npf/js/sliderdark.js"></script>
+    <script src="/Npf/js/fullpage.js"></script>
+    <script src="/Npf/js/jquery.flip.js"></script>
+    <script src="/Npf/js/fullpage.extensions.min.js"></script>
+    <script src="/Npf/js/index.js"></script>
+    <script src="/Npf/js/sliderdark.js"></script>
   </body>
 </html>
