adding meta tag for cards

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
               <h1 class="intro">
                 Contact Me.
               </h1>
+              <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="afaragi"><a class="LI-simple-link" href='https://ma.linkedin.com/in/afaragi?trk=profile-badge'>Ayoub Faragi</a></div>
             <section class="contact">
               <li id="itemlists">
                 <a href="https://github.com/biggymarley">
@@ -241,7 +242,7 @@
            </div>
           </section>
     </div>
-
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <script src="/Npf/js/fullpage.js"></script>
     <script src="/Npf/js/jquery.flip.js"></script>
     <script src="/Npf/js/fullpage.extensions.min.js"></script>
