--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
       <section class="section s1" >
         <div class="cent">
           <div class="container">
+<section class="introsec">
             <h1 class="intro" >
               Hey, my name is Ayoub FARAGI
             </h1>
             <h1 class="intro">
               I am a Full stack Engineer
             </h1>
-          <br><br><br><br>
+          </section>
           <h1 class="intro">
             - I'm a Fullstack Developer & Designer.
           </h1>
