adding some animation to imgs

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 
               <div class="languages">
                 <section class="type">
-                  <img class="projectimg" src="/Npf/img/php.svg" />
-                  <img class="projectimg" src="/Npf/img/mysql.svg" />
+                  <img class="projectimg tst" src="/Npf/img/php.svg" />
+                  <img class="projectimg tst" src="/Npf/img/mysql.svg" />
                 </section>
                 <section class="type">
-                  <img class="projectimg" src="/Npf/img/html.svg" />
-                  <img class="projectimg" src="/Npf/img/css.svg" />
-                  <img class="projectimg" src="/Npf/img/js.svg" />
+                  <img class="projectimg tst" src="/Npf/img/html.svg" />
+                  <img class="projectimg tst" src="/Npf/img/css.svg" />
+                  <img class="projectimg tst" src="/Npf/img/js.svg" />
                 </section>
               </div>
             </div>
@@ -162,7 +162,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -186,7 +186,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -214,7 +214,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -236,12 +236,12 @@
                 </p>
                 <div class="languages">
                   <section class="type">
-                    <img class="projectimg" src="/Npf/img/php.svg" />
-                    <img class="projectimg" src="/Npf/img/mysql.svg" />
+                    <img class="projectimg tst" src="/Npf/img/php.svg" />
+                    <img class="projectimg tst" src="/Npf/img/mysql.svg" />
                   </section>
                   <section class="type">
-                    <img class="projectimg" src="/Npf/img/html.svg" />
-                    <img class="projectimg" src="/Npf/img/css.svg" />
+                    <img class="projectimg tst" src="/Npf/img/html.svg" />
+                    <img class="projectimg tst" src="/Npf/img/css.svg" />
                   </section>
                 </div>
               </div>
