adding some animation to imgs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
 
         <button class="menu-button">
-          <img class="menu-img" src="/Npf/img/lmenu.png" />
+          <img class="menu-img" src="/Npf/img/lmenu.svg" />
         </button>
       </nav>
     </header>
