--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         </div>
       </section>
       <section class="section">
+         <div class="in" >
         <div id="contactme" >
           <!-- <div class="contact-items"> -->
           <h1 class="intro" style="transform: translateZ(50px); pointer-events: none;">Contact Me.</h1>
@@ -264,7 +265,7 @@
               </a>
             </li>
           </section>
-          <!-- </div> -->
+          </div>
         </div>
       </section>
     </div>
