menu on top + cool card

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <ul id="menu" class="onheader header-items">
           <li class="item-project">
             <a href="#Ps">
-              <span class="active-span">Projects</span>
+              <h4 class="active-span">Projects</h4>
             </a>
           </li>
           <li class="item-project">
             <a href="#Cme">
-              <span class="active-span">Contact Me</span>
+              <h4 class="active-span">Contact Me</h4>
             </a>
           </li>
           <li class="darkbutton-countainer">
