--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:title" content="Portfolio" />
+    <meta property="og:title" content="Npflio" />
     <meta
       property="og:image"
-      content="https://biggymarley.github.io/Npf/img/skulls.png"
+      content="https://biggymarley.github.io/Npf/img/profile.jpeg"
     />
     <meta
       property="og:description"
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://biggymarley.github.io/Npf/#Home" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Npflio</title>
     <link rel="stylesheet" href="/Npf/css/index.css" />
     <link rel="stylesheet" href="/Npf/css/header.css" />
     <link rel="stylesheet" href="/Npf/css/dark.css" />
@@ -84,6 +84,7 @@
       </li>
     </div>
     <!-- /HEADER -->
+
     <div id="fullpage">
       <section class="section s1">
         <div class="cent">
@@ -116,7 +117,6 @@
                   <br />
                   <img class="projectimg" src="/Npf/img/web.svg"
                 /></a>
-              
               </section>
               <p>
                 Camagru : instagram like app This web project is a small web
@@ -253,7 +253,7 @@
             <!-- <div class="contact-items"> -->
               <div class="shadoweffect">
                 <h1
-                class="intro up"
+                class="intro up" 
                 >
                 Contact Me
               </h1>
