--- a/Loading.html
+++ b/Loading.html
@@ -1,8 +1,10 @@
 
 <html>
     <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <title>`substitute(Filename('', 'Page itle'), '^.', '\u&', '')`</title>
+        <title>Loading test</title>
       <style type="text/css" media="all">
             *{
             padding: 0;
