--- a/Loading.html
+++ b/Loading.html
@@ -1,7 +1,9 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Loading system</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
+ <title>Loading system</title>
   <style type="text/css" media="all">
     * {
       padding: 0;
