--- a/Loading.html
+++ b/Loading.html
@@ -131,7 +131,7 @@
 
 </div>
 <div class="web">
-<object type="text/html" class="site" data="http://www.camagrubig.tk/"></object>
+<object type="text/html" class="site" data="https://biggymarley.github.io/Npf/"></object>
 </div>
 
 </body>
