--- a/Loading.html
+++ b/Loading.html
@@ -129,7 +129,7 @@
 
 </div>
 <div class="web">
-<object type="text/html" class="site" data="https://biggymarley.github.io/Npf/"></object>
+<object type="text/html" class="site" data="https://biggymarley.github.io/Npf"></object>
 </div>
 
 </body>
