--- a/Loading.html
+++ b/Loading.html
@@ -2,6 +2,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
+
   <title>Loading system</title>
   <style type="text/css" media="all">
     * {
@@ -129,7 +131,7 @@
 
 </div>
 <div class="web">
-<object type="text/html" class="site" data="https://biggymarley.github.io/Npf"></object>
+<object type="text/html" class="site" data="https://biggymarley.github.io/Npf/"></object>
 </div>
 
 </body>
