--- a/Npf/index.html
+++ b/Npf/index.html
@@ -4,24 +4,24 @@
     <meta property="og:title" content="Npflio" />
     <meta
       property="og:image"
-      content="https://biggymarley.github.io/Npf/img/profile.jpeg"
+      content="https://biggymarley.github.io/Npf/Npf/img/profile.jpeg"
     />
     <meta
       property="og:description"
       content="I'm a student from 1337, a pretty cool computer science school from the 42 Network located in Khouribga, Morocco. I've always been drawn to the overlap between design and development. My skills are broad: from ux to design, front end to back end development. Architecture matters to me. Things have to stay clean and simple, and with this in mind I take time creating modules and boilerplates, trying to bring some purity in my work. I'm available for remote work - if you would like to build something together, get in touch?"
     />
-    <meta property="og:url" content="https://biggymarley.github.io/Npf/#Home" />
+    <meta property="og:url" content="https://biggymarley.github.io/Npf/Npf/#Home" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0" />
     <title>Npflio</title>
-    <link rel="stylesheet" href="/Npf/css/index.css" />
-    <link rel="stylesheet" href="/Npf/css/header.css" />
-    <link rel="stylesheet" href="/Npf/css/dark.css" />
-    <link rel="stylesheet" href="/Npf/css/darkmode-buttom.css" />
-    <link rel="stylesheet" href="/Npf/css/fullpage.min.css" />
-    <link rel="stylesheet" href="/Npf/css/glass.css" />
-    <link rel="stylesheet" href="/Npf/css/sections.css" />
-    <link rel="stylesheet" href="/Npf/css/media.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/index.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/header.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/dark.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/fullpage.min.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/glass.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/sections.css" />
+    <link rel="stylesheet" href="/Npf/Npf/css/media.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
       rel="stylesheet"
@@ -66,7 +66,7 @@
           </li>
         </ul>
         <button class="menu-button">
-          <img class="menu-img" src="/Npf/img/lmenu.svg" />
+          <img class="menu-img" src="/Npf/Npf/img/lmenu.svg" />
         </button>
       </nav>
     </header>
@@ -118,7 +118,7 @@
                 <a class="project" href="https://github.com/biggymarley/camagru"
                   >Camagru
                   <br />
-                  <img class="projectimg" src="/Npf/img/web.svg"
+                  <img class="projectimg" src="/Npf/Npf/img/web.svg"
                 /></a>
               </section>
               <p>
@@ -129,13 +129,13 @@
 
               <div class="languages">
                 <section class="type">
-                  <img class="projectimg tst" src="/Npf/img/php.svg" />
-                  <img class="projectimg tst" src="/Npf/img/mysql.svg" />
+                  <img class="projectimg tst" src="/Npf/Npf/img/php.svg" />
+                  <img class="projectimg tst" src="/Npf/Npf/img/mysql.svg" />
                 </section>
                 <section class="type">
-                  <img class="projectimg tst" src="/Npf/img/html.svg" />
-                  <img class="projectimg tst" src="/Npf/img/css.svg" />
-                  <img class="projectimg tst" src="/Npf/img/js.svg" />
+                  <img class="projectimg tst" src="/Npf/Npf/img/html.svg" />
+                  <img class="projectimg tst" src="/Npf/Npf/img/css.svg" />
+                  <img class="projectimg tst" src="/Npf/Npf/img/js.svg" />
                 </section>
               </div>
             </div>
@@ -147,7 +147,7 @@
                     class="project"
                     href="https://github.com/biggymarley/Minishell_1337"
                     >Minishell<br />
-                    <img class="projectimg" src="/Npf/img/minishell.svg"
+                    <img class="projectimg" src="/Npf/Npf/img/minishell.svg"
                   /></a>
                 </section>
 
@@ -162,7 +162,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -175,7 +175,7 @@
                     href="https://github.com/biggymarley/ls_1337"
                     >Ls : /bin/ls<br /><img
                       class="projectimg"
-                      src="/Npf/img/minishell.svg"
+                      src="/Npf/Npf/img/minishell.svg"
                   /></a>
                 </section>
                 <p>
@@ -185,7 +185,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -198,7 +198,7 @@
                     href="https://github.com/biggymarley/shell-21sh"
                     >21SH<br /><img
                       class="projectimg"
-                      src="/Npf/img/minishell.svg"
+                      src="/Npf/Npf/img/minishell.svg"
                   /></a>
                 </section>
 
@@ -212,7 +212,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -225,7 +225,7 @@
                     href="https://github.com/biggymarley/Piscine-php"
                     >Piscine PHP<br /><img
                       class="projectimg"
-                      src="/Npf/img/web.svg"
+                      src="/Npf/Npf/img/web.svg"
                   /></a>
                 </section>
                 <p>
@@ -233,12 +233,12 @@
                 </p>
                 <div class="languages">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/img/php.svg" />
-                    <img class="projectimg tst" src="/Npf/img/mysql.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/php.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/mysql.svg" />
                   </section>
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/img/html.svg" />
-                    <img class="projectimg tst" src="/Npf/img/css.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/html.svg" />
+                    <img class="projectimg tst" src="/Npf/Npf/img/css.svg" />
                   </section>
                 </div>
               </div>
@@ -255,7 +255,7 @@
               <h1 class="shadow">Contact Me</h1>
             </div>
             <a href="https://www.linkedin.com/in/afaragi">
-              <img class="profile" src="/Npf/img/profile.jpeg" />
+              <img class="profile" src="/Npf/Npf/img/profile.jpeg" />
             </a>
             <div class="shadoweffect">
               <section class="contact up">
@@ -293,10 +293,10 @@
     });
     </script>
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
-    <script src="/Npf/js/fullpage.min.js"></script>
-    <script src="/Npf/js/fullpage.extensions.min.js"></script>
-    <script src="/Npf/js/index.js"></script>
-    <script src="/Npf/js/sliderdark.js"></script>
+    <script src="/Npf/Npf/js/fullpage.min.js"></script>
+    <script src="/Npf/Npf/js/fullpage.extensions.min.js"></script>
+    <script src="/Npf/Npf/js/index.js"></script>
+    <script src="/Npf/Npf/js/sliderdark.js"></script>
   </body>
  
 </html>
